--- a/style.css
+++ b/style.css
@@ -522,7 +522,7 @@ body {
 =============================*/
 .slider .single-slider {
   height: 600px;
-  background-size: cover;
+  /* background-size: cover; */
   background-position: center;
   background-repeat: no-repeat;
 }
